--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
         "vue-loader": "15.9.8"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.2.1",
+        "@fortawesome/free-brands-svg-icons": "^6.2.1",
+        "@fortawesome/free-regular-svg-icons": "^6.2.1",
+        "@fortawesome/free-solid-svg-icons": "^6.2.1",
+        "@fortawesome/vue-fontawesome": "^2.0.9",
         "vue": "2.7.10",
+        "vue-axios": "^3.5.2",
         "vue-router": "^3.0.2",
         "vue-template-compiler": "2.7.10",
         "yarn": "^1.22.19"
