--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "resolve-url-loader": "5.0.0",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "vue-loader": "15.9.8"
+        "vue-loader": "15.9.8",
+		"moment": "^2.24.0"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.2.1",
