--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.5",
+        "moment": "^2.24.0",
         "postcss": "^8.1.14",
         "resolve-url-loader": "5.0.0",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "vue-loader": "15.9.8",
-		"moment": "^2.24.0"
+		"vue-sweetalert2": "^1.6.4"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.2.1",
